Better looking GUI and can now serialize and deserialize information for RobotTeams and Matches